fix: fixing the menu overflow problem

--- a/src/index.css
+++ b/src/index.css
@@ -6,17 +6,14 @@
   }
 }
 
-html, body {
-  overflow-x: hidden;
-  overscroll-behavior: none;
-}
 body {
-  width: 100%;
+  width: 100dvw;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overscroll-behavior: none;
 }
 .main-container {
   padding-top: env(safe-area-inset-top);
